--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -198,7 +198,7 @@ div.content-containers{
         &#console-games-content-container{
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/games-2453777_1920.jpg');
 
-            img{
+            .console-logo-image{
                 max-height: 150px;
                 max-width: 266px;
             }
@@ -209,6 +209,13 @@ div.content-containers{
                 ul{
                     list-style-type: none;
                     padding-left: 0px;
+
+                    li{
+                        img{
+                            max-height:50px;
+                            width: auto;
+                        }
+                    }
                 }
             }
         }
