modified button styling

--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -217,6 +217,14 @@ div.content-containers{
                         }
                     }
                 }
+
+                button{
+                    margin-bottom: 20px;
+                    padding: 5px 15px;
+                    border-radius: 8px;
+                    color: #1FFFFF;
+                    background: #343A40;
+                }
             }
         }
     }
