--- a/Styles/style.css
+++ b/Styles/style.css
@@ -182,7 +182,7 @@ div.content-containers .games-content-container#pc-games-content-container {
 div.content-containers .games-content-container#console-games-content-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
 }
-div.content-containers .games-content-container#console-games-content-container .console-logo-image {
+div.content-containers .games-content-container#console-games-content-container img {
   max-height: 150px;
   max-width: 266px;
 }
@@ -193,9 +193,12 @@ div.content-containers .games-content-container#console-games-content-container 
   list-style-type: none;
   padding-left: 0px;
 }
-div.content-containers .games-content-container#console-games-content-container .console-content ul li img {
-  max-height: 50px;
-  width: auto;
+div.content-containers .games-content-container#console-games-content-container .console-content button {
+  margin-bottom: 20px;
+  padding: 5px 15px;
+  border-radius: 8px;
+  color: #1FFFFF;
+  background: #343A40;
 }
 
 /*# sourceMappingURL=style.css.map */
