--- a/Deployment/styles.scss
+++ b/Deployment/styles.scss
@@ -194,6 +194,10 @@ div.content-containers{
         }
     }
 
+    #games-content-spacer{
+        margin-bottom: 50px;
+    }
+
     .games-content-container{
         background-size: cover;
         min-height: 500px;
