--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -177,6 +177,9 @@ div.content-containers #about-content-container h4 {
   color: #a9a9a9;
   font-size: large;
 }
+div.content-containers #games-content-spacer {
+  margin-bottom: 50px;
+}
 div.content-containers .games-content-container {
   background-size: cover;
   min-height: 500px;
@@ -193,6 +196,7 @@ div.content-containers .games-content-container#pc-games-content-container {
 }
 div.content-containers .games-content-container#console-games-content-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
+  margin-top: 25px;
 }
 div.content-containers .games-content-container#console-games-content-container img {
   max-height: 150px;
