--- a/Deployment/styles.scss
+++ b/Deployment/styles.scss
@@ -194,7 +194,7 @@ div.content-containers{
         }
     }
 
-    #games-content-spacer{
+    #console-games-spacer{
         margin-bottom: 50px;
     }
 
