--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -112,6 +112,10 @@ body {
   border-bottom: 1px solid white;
 }
 
+#console-games-spacer {
+  margin-bottom: 50px;
+}
+
 div.content-containers {
   min-height: 100px;
   text-shadow: -2px 4px 4px #091243, 0 0 10px #00D0FF, inset 1px 1px 1px white;
@@ -176,9 +180,6 @@ div.content-containers #about-content-container {
 div.content-containers #about-content-container h4 {
   color: #a9a9a9;
   font-size: large;
-}
-div.content-containers #console-games-spacer {
-  margin-bottom: 50px;
 }
 div.content-containers .games-content-container {
   background-size: cover;
