--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -120,7 +120,8 @@ div.content-containers{
     -2px 4px 4px #091243, 
     0 0 10px #00D0FF,
     inset 1px 1px 1px white;
-    border: 2px solid #1FFFFF;
+    border-top: 2px solid #1FFFFF;
+    border-bottom: 2px solid #1FFFFF;
    
     h1, h2, h3, h4{
         color: #fff;
