--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -40,7 +40,6 @@ body {
 }
 
 .navbar {
-  position: fixed;
   width: 100%;
   top: 0;
   border-bottom: 1px solid #1FFFFF;
@@ -109,7 +108,7 @@ div.content-containers {
   border-top: 2px solid #1FFFFF;
   border-bottom: 2px solid #1FFFFF;
 }
-div.content-containers h1, div.content-containers h2, div.content-containers h3, div.content-containers h4 {
+div.content-containers h1, div.content-containers h2, div.content-containers h3, div.content-containers h4, div.content-containers h6 {
   color: #fff;
 }
 div.content-containers h1 {
@@ -171,23 +170,40 @@ div.content-containers #about-content-container h4 {
 }
 div.content-containers .games-content-container {
   background-size: cover;
-  min-height: 500px;
+  min-height: 350px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin: 0px 10px;
   color: white;
-  flex-direction: column;
+}
+@media screen and (max-width: 400px) {
+  div.content-containers .games-content-container {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 div.content-containers .games-content-container#pc-games-content-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/mateo-vrbnjak-nCU4yq5xDEQ-unsplash.jpg");
+}
+div.content-containers .games-content-container#pc-games-content-container .pc-entity {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid #fff;
+  border-radius: 4px;
+  padding: 10px 20px;
+}
+div.content-containers .games-content-container#pc-games-content-container .pc-entity img {
+  max-height: 150px;
+  width: auto;
 }
 div.content-containers .games-content-container#console-games-content-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
 }
 div.content-containers .games-content-container#console-games-content-container img {
-  max-height: 150px;
+  min-height: 150px;
   max-width: 266px;
 }
 div.content-containers .games-content-container#console-games-content-container .console-content {
