--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -109,10 +109,6 @@ body{
     }
 }
 
-#console-games-spacer{
-    margin-bottom: 50px; 
-}
-
 div.content-containers{
     min-height: 100px;
     text-shadow:
@@ -221,6 +217,9 @@ div.content-containers{
         }
 
         &#console-games-content-container{
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 100%;
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/games-2453777_1920.jpg');
             
             img{    
