--- a/Styles/styles.scss
+++ b/Styles/styles.scss
@@ -109,6 +109,10 @@ body{
     }
 }
 
+#console-games-spacer{
+    margin-bottom: 50px; 
+}
+
 div.content-containers{
     min-height: 100px;
     text-shadow:
