--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -98,10 +98,6 @@ body {
   border-bottom: 1px solid white;
 }
 
-#console-games-spacer {
-  margin-bottom: 50px;
-}
-
 div.content-containers {
   min-height: 100px;
   text-shadow: -2px 4px 4px #091243, 0 0 10px #00D0FF, inset 1px 1px 1px white;
@@ -200,6 +196,9 @@ div.content-containers .games-content-container#pc-games-content-container .pc-e
   width: auto;
 }
 div.content-containers .games-content-container#console-games-content-container {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
 }
 div.content-containers .games-content-container#console-games-content-container img {
