--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -13,6 +13,25 @@
   align-items: center;
 }
 
+.flex-hcenter {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mb-md {
+  margin-bottom: 15px;
+}
+
+.mt-md {
+  margin-top: 15px;
+}
+
 .mh-10 {
   margin: 0px 10px;
 }
@@ -227,6 +246,53 @@ div.content-containers .games-content-container#console-games-content-container 
   border-radius: 8px;
   color: #1FFFFF;
   background: #343A40;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.footer-info-columns div {
+  margin: 0px 20px;
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+.flip-card-back h6 {
+  font-size: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
