--- a/Deployment/style.css
+++ b/Deployment/style.css
@@ -221,8 +221,9 @@ div.content-containers .games-content-container#console-games-content-container 
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/games-2453777_1920.jpg");
 }
 div.content-containers .games-content-container#console-games-content-container img {
+  max-height: 150px;
   min-height: 150px;
-  max-width: 266px;
+  max-width: 257px;
 }
 div.content-containers .games-content-container#console-games-content-container .console-content {
   padding: 0px 40px;
@@ -235,7 +236,7 @@ div.content-containers .games-content-container#console-games-content-container 
   margin-bottom: 20px;
   padding: 5px 15px;
   border-radius: 8px;
-  color: #1FFFFF;
+  color: #FF3131;
   background: #343A40;
 }
 
